# PR_AUTO

./: README.md  filter_pr_helper.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: auto_pr_review.yml  pr_review_bot.yaml
assets/: sample_pr.patch
pr_agent_config/: custom_instruction.txt
src/: github_comment.py  pr_bot_agent.py  pr_bot_state.py  prompt_static.py
src/agent/file_crawler/: file_crawler_prompt.py  file_crawler_tool.py
src/agent/pull_request/: pr_agent_tool.py  pr_bot_agent.py  pr_bot_state.py  pr_draft_prompt.py  pr_plan_prompt.py  summary_prompt.py  white_list_static.py
src/github_tools/: github_comment.py  github_files.py
src/model/: pull_request_model.py
src/repo/: pr_agent_repo.py
src/utility/: fetch_utility.py  langfuse_helper.py  llm_state.py  model_loader.py  module_prompt_factory.py  static_variable.py  utility_func.py
test/: test_lite_llm.py
